# auth

./: .env.example  README.md  pyproject.toml  setup.cfg
src/auth/: main.py
src/auth/adapters/: cognito.py
src/auth/domain/: models.py
src/auth/ports/: ports.py
tests/: conftest.py
tests/unit/adapters/: test_cognito.py
